[gd_scene load_steps=2 format=3 uid="uid://d0thbvrt86t67"]

[ext_resource type="Script" uid="uid://bokyftck22go4" path="res://States/npc_idle_walk.gd" id="1_gu5m7"]

[node name="NpcIdleWalk" type="Node"]
script = ExtResource("1_gu5m7")

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
